k8s/declarative/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/weatherforecast"
        backend:
          service:
            name: web-app-service
            port:
              number: 5678
